# suiflash

./: Cargo.toml  README.md
.github/: copilot-instructions.md
.github/workflows/: move_ci.yml  rust_ci.yml
docs/: DESIGN.md  SCALLOP_INTEGRATION.md  TEST_GUIDE.md
suiflash-bot/: .env.example  Cargo.toml  README.md  config.example.toml
suiflash-bot/src/: api_tests.rs  collectors.rs  config.rs  executors.rs  integration_tests.rs  main.rs  strategies.rs  tests.rs
suiflash-contract/suiflash-router/: BUCKET_INTEGRATION.md  COMPLETION_REPORT.md  Move.toml  NAVI_INTEGRATION.md  PROJECT_SUMMARY.md  README.md  SCALLOP_IMPLEMENTATION_SUMMARY.md  SCALLOP_INTEGRATION.md  TEST_GUIDE.md  TEST_RESULTS.md
suiflash-contract/suiflash-router/sources/: errors.move  interfaces.move  main.move  protocols.move  registry.move  router.move  state.move
suiflash-contract/suiflash-router/sources/integrations/: bucket.move  navi.move  scallop.move
suiflash-contract/suiflash-router/sources/tests/: bucket_integration_tests.move  bucket_integration_tests_simple.move  error_tests.move  error_tests_simple.move  integration_tests.move  navi_integration_tests.move  protocol_tests.move  scallop_integration_tests.move  scallop_integration_tests_simple.move  state_tests.move  state_tests_simple.move
tests/: aggregator_tests.rs
