[package]
name = "suiflash_bot"
version = "0.1.0"
edition = "2024"

[dependencies]
artemis = { git = "https://github.com/akjong/artemis" }
async-trait = "0.1"
axum = { version = "0.8", features = ["json"] }
bcs = "0.1"
blake3 = "1"
clap = { version = "4", features = ["derive"] }
dotenv = "0.15"
eyre = "0.6"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sui_sdk = { git = "https://github.com/mystenlabs/sui", package = "sui-sdk" }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tokio-test = "0.4"
