[package]
name = "suiflash_bot"
version = "0.1.0"
edition = "2024"

[dependencies]
artemis = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true, features = ["json"] }
blake3 = { workspace = true }
config = { workspace = true }
dotenv = { workspace = true }
eyre = { workspace = true }
hex = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sui_json_rpc_types = { workspace = true }
sui_sdk = { workspace = true }
sui_types = { workspace = true }
tokio = { workspace = true, features = ["full"] }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
